Add support for grouping paths into sub-sketches

--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,7 @@ project('dendrite', 'cpp')
 sources = [
   'src/main.cpp', 'src/mainwindow.cpp', 'src/controller/controlpoint.cpp', 'src/controller/node.cpp',
   'src/controller/path.cpp', 'src/controller/selection.cpp', 'src/controller/sketch.cpp', 'src/controller/undo.cpp',
-  'src/model/sketch.cpp', 'src/serialisation/layout.cpp', 'src/serialisation/reader.cpp',
+  'src/model/document.cpp', 'src/model/sketch.cpp', 'src/serialisation/layout.cpp', 'src/serialisation/reader.cpp',
   'src/serialisation/writer.cpp', 'src/utilities/geometry.cpp', 'src/view/sketch.cpp',
 ]
 
